--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2643,7 +2643,10 @@ input, select, textarea {
 			}
 
 			.image.main img {
-				width: 100%;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				/* width: 100%; */
 			}
 
 		@media screen and (max-width: 736px) {
